tests/golden/type_errors/named_payload_on_positional_variant.cd
enum Result { Ok(number), Empty }
let result = Result.Ok(1);
let label = match result {
  Result.Ok(number: value) => value,
  Result.Empty => 0,
};
