tests/golden/type_errors/named_payload_on_positional_variant.err
Type error at 4:10: variant Result.Ok has no named payload fields
    Result.Ok(number: value) => value,
           ^
